# public-housing-score

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: logic.py  main.py  models.py
frontend/: Dockerfile  README.md  app.py  requirements.txt
frontend/.streamlit/: config.toml  secrets.toml
