[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "numpy>=2.4.3",
    "pydantic>=2.12.5",
    "redis>=7.4.0",
    "scipy>=1.17.1",
    "uvicorn>=0.42.0",
]
